--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,11 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+    - name: Ensure Docker is Running
+      run: |
+        sudo systemctl start docker
+        sudo systemctl enable docker
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
@@ -29,35 +34,31 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-    - name: File System Scan with Trivy
-      run: |
-        docker run --rm -v ${{ github.workspace }}:/mnt aquasec/trivy fs --format table -o /mnt/trivy-fs-report.html /mnt
-
-    - name: Upload Trivy FS Scan Report
-      uses: actions/upload-artifact@v4
-      with:
-        name: trivy-fs-report
-        path: trivy-fs-report.html
-
     - name: Build Docker image
       run: |
         docker buildx build --cache-from=type=registry,ref=bulawesley/smartedu:cache \
           --cache-to=type=inline \
           -t bulawesley/smartedu:v${{ github.run_number }} -f smartedu/Dockerfile smartedu/
 
-    - name: Docker Image Scan with Trivy
+    - name: Push Docker image
       run: |
-        docker run --rm aquasec/trivy image --format table -o trivy-image-report.html bulawesley/smartedu:v${{ github.run_number }}
+        docker push bulawesley/smartedu:v${{ github.run_number }}
+
+    - name: Pull Docker Image (Ensure Availability)
+      run: docker pull bulawesley/smartedu:v${{ github.run_number }}
+
+    - name: Save Docker Image to File
+      run: docker save -o smartedu.tar bulawesley/smartedu:v${{ github.run_number }}
+
+    - name: Docker Image Scan with Trivy (Using Input File)
+      run: |
+        docker run --rm -v ${{ github.workspace }}:/mnt aquasec/trivy image --input /mnt/smartedu.tar --format table -o /mnt/trivy-image-report.html
 
     - name: Upload Trivy Image Scan Report
       uses: actions/upload-artifact@v4
       with:
         name: trivy-image-report
         path: trivy-image-report.html
-
-    - name: Push Docker image
-      run: |
-        docker push bulawesley/smartedu:v${{ github.run_number }}
 
     - name: Deploy Application
       run: |
@@ -68,4 +69,3 @@ jobs:
 
     - name: Display Server IP
       run: curl ifconfig.io
-
