--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,5 +57,13 @@ jobs:
         docker pull bulawesley/smartedu:v${{ github.run_number }}
         docker run -d --name smartedu-app -p 4566:80 bulawesley/smartedu:v${{ github.run_number }}
 
-    - name: Display Server IP
-      run: curl ifconfig.io
+    - name: Install and Start Ngrok
+      run: |
+        curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null
+        echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list
+        sudo apt update && sudo apt install ngrok -y
+        ngrok config add-authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
+        nohup ngrok http 4566 > /dev/null 2>&1 &
+
+    - name: Display Ngrok URL
+      run: curl --silent http://127.0.0.1:4040/api/tunnels | jq -r '.tunnels[0].public_url'
