--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,7 +62,7 @@ jobs:
         curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null
         echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list
         sudo apt update && sudo apt install ngrok -y
-        ngrok config add-authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
+        ngrok authtoken ${{ secrets.NGROK_TOKEN }}
         nohup ngrok http 4566 > /dev/null 2>&1 &
 
     - name: Display Ngrok URL
