--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,7 +63,14 @@ jobs:
         echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list
         sudo apt update && sudo apt install ngrok -y
         ngrok authtoken ${{ secrets.NGROK_TOKEN }}
-        nohup ngrok http 4566 > /dev/null 2>&1 &
+        ngrok http 4566 --log=stdout > ngrok.log 2>&1 &
+
+    - name: Wait for Ngrok to Start (6 minutes)
+      run: sleep 360
+
+    - name: Debug Ngrok Log
+      run: cat ngrok.log
 
     - name: Display Ngrok URL
-      run: curl --silent http://127.0.0.1:4040/api/tunnels | jq -r '.tunnels[0].public_url'
+      run: |
+        curl --silent http://127.0.0.1:4040/api/tunnels | jq -r '.tunnels[0].public_url'
