--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -21,9 +21,8 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/my-php-app:latest .
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/my-php-app:latest -f smartedu/Dockerfile smartedu
 
       - name: Push Docker image
         run: |
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/my-php-app:latest
-
