--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -19,10 +19,25 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
+      - name: Set Docker image tag
+        run: echo "IMAGE_TAG=${{ secrets.DOCKERHUB_USERNAME }}/my-php-app:${{ github.sha }}" >> $GITHUB_ENV
+
       - name: Build Docker image
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/my-php-app:latest -f smartedu/Dockerfile smartedu
+          docker build \
+            -t $IMAGE_TAG \
+            -t ${{ secrets.DOCKERHUB_USERNAME }}/my-php-app:latest \
+            -f smartedu/Dockerfile smartedu
 
-      - name: Push Docker image
+      - name: Push Docker images
         run: |
+          docker push $IMAGE_TAG
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/my-php-app:latest
+
+      - name: Stop and remove any existing container
+        run: |
+          docker rm -f php-app || true
+
+      - name: Run Docker container on port 80
+        run: |
+          docker run -d -p 80:80 --name php-app ${{ secrets.DOCKERHUB_USERNAME }}/my-php-app:latest
