--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy Docker Image (Self-Hosted)
+name: Build and Deploy Docker Image (Organization Runners)
 
 on:
   push:
@@ -7,11 +7,18 @@ on:
 
 jobs:
   build-and-deploy:
-    runs-on: [self-hosted, build, deploy]
+    name: Build and Deploy with Organization Runners
+    # Uses your org runner group + labels
+    runs-on: [self-hosted, Wesley-group-runner, build, deploy, test]
+
+    env:
+      PROJECT_ID: tactile-visitor-469118-d8
+      ZONE: us-central1-c
+      INSTANCE_NAME: wesley-vm
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -41,3 +48,60 @@ jobs:
       - name: Run Docker container on port 80
         run: |
           docker run -d -p 80:80 --name php-app ${{ secrets.DOCKERHUB_USERNAME }}/my-php-app:latest
+
+      # ======== GCP Auth & Firewall/IP Steps ========
+
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+      - name: Set up gcloud CLI
+        uses: google-github-actions/setup-gcloud@v2
+        with:
+          project_id: ${{ env.PROJECT_ID }}
+
+      - name: Open firewall ports 80, 5000, 5001 (create or update)
+        shell: bash
+        run: |
+          set -euxo pipefail
+          RULE_NAME="allow-php-app-ports"
+          if gcloud compute firewall-rules describe "$RULE_NAME" --project "$PROJECT_ID" >/dev/null 2>&1; then
+            gcloud compute firewall-rules update "$RULE_NAME" \
+              --project "$PROJECT_ID" \
+              --allow=tcp:80,tcp:5000,tcp:5001 \
+              --direction=INGRESS \
+              --source-ranges=0.0.0.0/0
+          else
+            gcloud compute firewall-rules create "$RULE_NAME" \
+              --project "$PROJECT_ID" \
+              --allow=tcp:80,tcp:5000,tcp:5001 \
+              --direction=INGRESS \
+              --source-ranges=0.0.0.0/0 \
+              --network=default
+          fi
+
+      - name: Get VM public IP
+        id: ip
+        shell: bash
+        run: |
+          IP=$(gcloud compute instances describe "$INSTANCE_NAME" \
+                --zone "$ZONE" --project "$PROJECT_ID" \
+                --format='get(networkInterfaces[0].accessConfigs[0].natIP)')
+          if [[ -z "$IP" ]]; then
+            echo "No external IP on $INSTANCE_NAME. Ensure the VM has an external IP or add a Cloud NAT/Load Balancer." >&2
+            exit 1
+          fi
+          echo "PUBLIC_IP=$IP" >> $GITHUB_OUTPUT
+
+      - name: Publish access URLs to Job Summary
+        env:
+          IP: ${{ steps.ip.outputs.PUBLIC_IP }}
+        run: |
+          {
+            echo "## Access your app on \`$IP\`"
+            echo ""
+            echo "- http://$IP:80"
+            echo "- http://$IP:5000 (open in firewall; ensure a service is listening)"
+            echo "- http://$IP:5001 (open in firewall; ensure a service is listening)"
+          } >> "$GITHUB_STEP_SUMMARY"
